spacing close to correct with height padding  (will need to put it in the media queries the padding on content class

--- a/Homework/Final Project/css/mobile.css
+++ b/Homework/Final Project/css/mobile.css
@@ -1,5 +1,6 @@
 @viewport{
     width: auto;
+    height: auto;
 }
 
 body{
@@ -8,6 +9,15 @@ body{
 
 p{
     margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5{
+    margin: 0;
+}
+
+img{
+    width: 100%;
+    height: 100%
 }
 
 /****************** NAVIGATION PANE *************/
@@ -35,7 +45,8 @@ nav ul{
 .desktopNav{
     background-color: purple;
     display: block;
-    padding: 1%;
+    padding: 10px;
+    height: 6%;
 }
 
 .desktopNav ul{
@@ -53,7 +64,8 @@ nav ul{
 
 #navButton{
     background-color: pink;
-    padding: 1%;
+    padding: 10px;
+    height: 6%;
     display: none;
 }
 
@@ -66,31 +78,41 @@ nav ul{
 
 
 /****************** FIRST PAGE WITH SLIDES ******************/
-#home{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
 
-.panel{
-    height: 100%;
-    width: 100%;
-    float: left;
-    position: absolute;
-    margin: 0 2%;
-}
+	.pinSlides{
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
+		-webkit-perspective: 1000;
+		        perspective: 1000;
+	}
+	#slideContainer {
+		width: 200%; /* to contain 4 panels, each with 100% of window width */
+		height: 100%;
+        top: 0 !important;
+	}
+	.panel {
+		height: 100%;
+		width: 50%; /* relative to parent -> 25% of 400% = 100% of window width */
+        left: 0 !important;
+        float: left;
+	}
 
+#p1{
+    background-color: green;
+    margin-left:0;
+}
 
 #p2{
-    background-color: orange;
-    padding-right: 100%;
-    padding-bottom: 100px;
+    background-color: aqua;
+    left: 0;
+    right: 0;
 }
 
-#aboutH1{
-    
 
-}
+
+
+
 
 
 /****************** OTHER PAGES ******************/
@@ -99,11 +121,54 @@ nav ul{
     min-height: 100%;
     background-color: blue;
     margin: 0 auto;
+    top: 36.5px !important;
+    left: 0 !important
 }
 
-#experience{
-    background-color: aqua;
+.content{
+    background-color: grey;
+    margin-top: 10%;
+    margin-bottom: 50%;
+    margin-left: 3%;
+    margin-right: 3%;
+    text-align: center;
 }
+
+#home{
+    background-color: red;
+    margin-bottom: 50%;
+}
+
+#about{
+    background-color: orange;
+    margin-top: 4%;
+
+}
+
+#exerience{
+    background-color: yellow;
+    margin-top: 4%;
+    padding-top: 1%;
+    margin-bottom: 50%;
+}
+
+
+
+#skills{
+    background-color: green;
+    margin-top: 4%;
+
+}
+
+#projects{
+    background-color: blue;
+    margin-top: 4%;
+
+}
+
+
+
+
 
 
 
